# realtime_architecture

./: Delta_Live_Table_Test.ipynb  README.md  databricks_unit_test.py  dlt_example_1.ipynb  dlt_py_example_1.py  dlt_sql_example_1.sql  pyproject.toml  voltage_alerts-bronze_to_gold.py  voltage_alerts-source_to_bronze.py  voltage_alerts_cleanup.py  voltage_alerts_master.py
