[tool.poetry]
name = "realtime-architecture"
version = "0.1.0"
description = "Repository for testing out realtime architecture."
authors = ["Mei Yong <mei.yong@baringa.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
